# TokenTray

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  _version.py  build.ps1  coffee_dialog.py  history_store.py  icon_renderer.py  install_startup.py  popup_window.py  pyproject.toml  requirements.txt  run.pyw  single_instance.py  tray_app.py  usage_core.py
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: release.yml
Backup/: _version-JJ-Laptop-2026.py  popup_window-JJ-Laptop-2026.py  pyproject-JJ-Laptop-2026.toml
docs/specs/: 2026-05-shared-parser-and-advanced-tab.md
installer/: TokenTray.iss
spec/: 2026-05-clawpilot-usage-attribution.md  Anon_usage_plan.md  README.md  SPEC.md  WORK_LOG.md  card.json  punchlist.md
tests/: test_agency_events.py  test_coffee_dialog.py  test_copilot_session_state.py  test_history_store.py  test_history_store_phase3.py  test_popup_advanced.py  test_single_instance.py  test_tokentray_package.py  test_usage_core_cache.py
tokentray/: __init__.py  _version.py  usage_buckets.py
tokentray/parsers/: __init__.py  _common.py  agency_events.py  copilot_logs.py  copilot_session_state.py  model_normalize.py
tools/: make_icon.py  make_screenshot.py
